updated ens res

--- a/other_hand_features/other_models_from_hand_feats_v4.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v4.ipynb
@@ -2,36 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                              band_1  \\\n",
-      "0  [-27.878360999999998, -27.15416, -28.668615, -...   \n",
-      "1  [-12.242375, -14.920304999999999, -14.920363, ...   \n",
-      "2  [-24.603676, -24.603714, -24.871029, -23.15277...   \n",
-      "3  [-22.454607, -23.082819, -23.998013, -23.99805...   \n",
-      "4  [-26.006956, -23.164886, -23.164886, -26.89116...   \n",
-      "\n",
-      "                                              band_2        id inc_angle  \\\n",
-      "0  [-27.154118, -29.537888, -31.0306, -32.190483,...  dfd5f913   43.9239   \n",
-      "1  [-31.506321, -27.984554, -26.645678, -23.76760...  e25388fd   38.1562   \n",
-      "2  [-24.870956, -24.092632, -20.653963, -19.41104...  58b2aaa0   45.2859   \n",
-      "3  [-27.889421, -27.519794, -27.165262, -29.10350...  4cfc3a18   43.8306   \n",
-      "4  [-27.206915, -30.259186, -30.259186, -23.16495...  271f93f4   35.6256   \n",
-      "\n",
-      "   is_iceberg  \n",
-      "0           0  \n",
-      "1           0  \n",
-      "2           1  \n",
-      "3           0  \n",
-      "4           0  \n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "train_df = pd.read_json('../input/train.json')\n",
@@ -42,12 +17,24 @@
     "import cv2\n",
     "from itertools import combinations\n",
     "from scipy.ndimage import laplace, sobel\n",
-    "from scipy.stats import kurtosis, skew\n",
-    "\n",
+    "from scipy.stats import kurtosis, skew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_img_feat(img_org):\n",
     "    img = img_org.ravel()\n",
     "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img),\n",
     "             kurtosis(img),skew(img),np.max(img)-np.min(img)]\n",
+    "    return feats\n",
+    "\n",
+    "def sob_feat(img):\n",
+    "    img = img.ravel()\n",
+    "    feats = [img.var()]#,img.mean(),img.max()]\n",
     "    return feats\n",
     "    \n",
     "def get_other_feat(df):\n",
@@ -70,16 +57,25 @@
     "            tmp_feat.append(feat1[i]-feat2[i])\n",
     "            tmp_feat.append(feat1[i]+feat2[i])\n",
     "        \n",
-    "        lap_1 = laplace(img1, mode='reflect', cval=0.0).var()\n",
-    "        lap_2 = laplace(img2, mode='reflect', cval=0.0).var()\n",
+    "        lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
+    "        lap_2 = laplace(img2, mode='reflect', cval=0.0)\n",
     "        \n",
     "        # sob\n",
-    "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0).var()\n",
-    "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0).var()\n",
-    "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0).var()\n",
-    "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0).var()\n",
+    "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
+    "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
+    "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
+    "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
     "        \n",
-    "        tmp_feat += [lap_1,lap_2,sob1,sob2,sob3,sob4]\n",
+    "        tmp_feat += [lap_1.var(),lap_2.var(),\n",
+    "                     lap_1.mean(),lap_2.mean(),\n",
+    "                     np.median(lap_1),np.median(lap_2),\n",
+    "                     lap_1.min(),lap_2.min(),\n",
+    "                     lap_1.max(),lap_2.max()]\n",
+    "        tmp_feat +=  sob_feat(sob1)\n",
+    "        tmp_feat +=  sob_feat(sob2)\n",
+    "        tmp_feat +=  sob_feat(sob3)\n",
+    "        tmp_feat +=  sob_feat(sob4)\n",
+    "                     \n",
     "        \n",
     "        feats.append(tmp_feat)\n",
     "        \n",
@@ -91,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 39) (8424, 39)\n"
+      "(1604, 47) (8424, 47)\n"
      ]
     }
    ],
@@ -108,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -182,19 +178,17 @@
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.287731041382 val loss 0.262732928163\n",
+      "this fold train loss 0.28346680734 val loss 0.269383982705\n",
       "============================\n",
-      "this fold train loss 0.27989720333 val loss 0.310595262597\n",
+      "this fold train loss 0.266844250564 val loss 0.342750661321\n",
       "============================\n",
-      "this fold train loss 0.277975666022 val loss 0.311678439165\n",
+      "this fold train loss 0.283986089517 val loss 0.263473158322\n",
       "============================\n",
-      "this fold train loss 0.277803243272 val loss 0.314822358111\n",
+      "this fold train loss 0.271168136823 val loss 0.316982235079\n",
       "============================\n",
-      "this fold train loss 0.281082104942 val loss 0.294895949458\n",
+      "this fold train loss 0.279891935227 val loss 0.284484611506\n",
       "============================\n",
-      "this fold train loss 0.285190185047 val loss 0.276584347618\n",
-      "============================\n",
-      "all avg 0.281613240666 0.295218214185\n"
+      "all avg 0.277071443894 0.295414929787\n"
      ]
     }
    ],
@@ -202,7 +196,7 @@
     "# lr\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
-    "                           fold_cnt=6,\n",
+    "                           fold_cnt=5,\n",
     "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
     "import pickle\n",
     "with open('../features/other_model_lr4.pkl','wb') as fout:\n",
@@ -211,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -222,30 +216,30 @@
       "            max_depth=5, max_features='auto', max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "            min_samples_leaf=1, min_samples_split=2,\n",
-      "            min_weight_fraction_leaf=0.0, n_estimators=30, n_jobs=1,\n",
+      "            min_weight_fraction_leaf=0.0, n_estimators=20, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.332707916851 val loss 0.416499510302\n",
+      "this fold train loss 0.332741966762 val loss 0.395147960132\n",
       "============================\n",
-      "this fold train loss 0.332503579345 val loss 0.393370767949\n",
+      "this fold train loss 0.324608489944 val loss 0.414022266324\n",
       "============================\n",
-      "this fold train loss 0.331014507639 val loss 0.386497911175\n",
+      "this fold train loss 0.337654477224 val loss 0.370658694911\n",
       "============================\n",
-      "this fold train loss 0.330437118176 val loss 0.371705114631\n",
+      "this fold train loss 0.338918728628 val loss 0.367910521598\n",
       "============================\n",
-      "this fold train loss 0.333927795106 val loss 0.367035762438\n",
+      "this fold train loss 0.329491481291 val loss 0.364845784461\n",
       "============================\n",
-      "this fold train loss 0.324476612527 val loss 0.410691940824\n",
+      "this fold train loss 0.32708683367 val loss 0.405368963986\n",
       "============================\n",
-      "this fold train loss 0.331683319328 val loss 0.362861542234\n",
+      "this fold train loss 0.333871719534 val loss 0.370725549828\n",
       "============================\n",
-      "all avg 0.330964406996 0.386951792793\n"
+      "all avg 0.332053385293 0.384097105891\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier,AdaBoostClassifier\n",
     "tmp_params = {\n",
-    "    'n_estimators':30,\n",
+    "    'n_estimators':20,\n",
     "    'max_depth':5,\n",
     "    'random_state':42\n",
     "}\n",
@@ -256,25 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 127,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "tmp_params = {\n",
-    "    'n_estimators':200,\n",
-    "    'learning_rate':0.01,\n",
-    "    'random_state':42\n",
-    "}\n",
-    "#lr_train,lr_pred = cv_feat(AdaBoostClassifier,fold_cnt=5,params=tmp_params)\n",
-    "# with open('../features/other_model_ada.pkl','wb') as fout:\n",
+    "# tmp_params = {\n",
+    "#     'n_estimators':20,\n",
+    "#     'learning_rate':0.01,\n",
+    "#     'random_state':42\n",
+    "# }\n",
+    "# lr_train,lr_pred = cv_feat(AdaBoostClassifier,fold_cnt=5,params=tmp_params)\n",
+    "# with open('../features/other_model_ada4.pkl','wb') as fout:\n",
     "#     pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -289,17 +281,17 @@
       "              min_weight_fraction_leaf=0.0, n_estimators=230,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0495707480273 val loss 0.252043622088\n",
+      "this fold train loss 0.0484457957525 val loss 0.260340096733\n",
       "============================\n",
-      "this fold train loss 0.0546954703019 val loss 0.233812466356\n",
+      "this fold train loss 0.0518920103925 val loss 0.23600689074\n",
       "============================\n",
-      "this fold train loss 0.0596918157523 val loss 0.190514160306\n",
+      "this fold train loss 0.0536541821668 val loss 0.190907007327\n",
       "============================\n",
-      "this fold train loss 0.0545535026418 val loss 0.208425240605\n",
+      "this fold train loss 0.0543177994383 val loss 0.20983728902\n",
       "============================\n",
-      "this fold train loss 0.0539377536118 val loss 0.244591307856\n",
+      "this fold train loss 0.0485981545413 val loss 0.24498760639\n",
       "============================\n",
-      "all avg 0.054489858067 0.225877359442\n"
+      "all avg 0.0513815884583 0.228415778042\n"
      ]
     }
    ],
@@ -322,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -335,17 +327,17 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.0760642053151 val loss 0.243601235928\n",
+      "this fold train loss 0.0707619651157 val loss 0.244624168607\n",
       "============================\n",
-      "this fold train loss 0.0804241277613 val loss 0.23459369554\n",
+      "this fold train loss 0.0771160590047 val loss 0.236731505637\n",
       "============================\n",
-      "this fold train loss 0.0826821901988 val loss 0.19195923385\n",
+      "this fold train loss 0.0818905922132 val loss 0.188375400413\n",
       "============================\n",
-      "this fold train loss 0.082669580743 val loss 0.212452242594\n",
+      "this fold train loss 0.0781106261424 val loss 0.209318274038\n",
       "============================\n",
-      "this fold train loss 0.0765358782398 val loss 0.244702244014\n",
+      "this fold train loss 0.0739296283551 val loss 0.248443547755\n",
       "============================\n",
-      "all avg 0.0796751964516 0.225461730385\n"
+      "all avg 0.0763617741662 0.22549857929\n"
      ]
     }
    ],
@@ -367,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 130,
    "metadata": {
     "scrolled": false
    },
@@ -398,7 +390,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0675601854902 val loss 0.25630813982\n",
+      "this fold train loss 0.0653782255222 val loss 0.263467525753\n",
       "============================\n"
      ]
     },
@@ -416,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0767522518115 val loss 0.235380362336\n",
+      "this fold train loss 0.0779592295279 val loss 0.22497207784\n",
       "============================\n"
      ]
     },
@@ -434,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0790560033704 val loss 0.199976805237\n",
+      "this fold train loss 0.0779151253656 val loss 0.18646074989\n",
       "============================\n"
      ]
     },
@@ -452,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0810209224713 val loss 0.225123786418\n",
+      "this fold train loss 0.0764226885245 val loss 0.222260040529\n",
       "============================\n"
      ]
     },
@@ -470,9 +462,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0732322664606 val loss 0.248995267605\n",
+      "this fold train loss 0.0697431038508 val loss 0.243907797654\n",
       "============================\n",
-      "all avg 0.0755243259208 0.233156872283\n"
+      "all avg 0.0734836745582 0.228213638333\n"
      ]
     }
    ],
