gen 5 fold, 10 fold res

--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -258,31 +258,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.635923\tvalid-logloss:0.63945\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[99]\ttrain-logloss:0.05968\tvalid-logloss:0.155567\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637181\tvalid-logloss:0.637341\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[135]\ttrain-logloss:0.045556\tvalid-logloss:0.123427\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635828\tvalid-logloss:0.639004\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[80]\ttrain-logloss:0.069422\tvalid-logloss:0.169733\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637275\tvalid-logloss:0.638753\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[102]\ttrain-logloss:0.063225\tvalid-logloss:0.131435\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636867\tvalid-logloss:0.638398\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[70]\ttrain-logloss:0.076736\tvalid-logloss:0.161157\n",
+      "\n",
+      "local average valid loss 0.150030379894 val loss std 0.0177745803547\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.015252\n",
+      "1  4023181e    0.931037\n",
+      "2  b20200e4    0.116098\n",
+      "3  e7f018bb    0.997562\n",
+      "4  4371c8c3    0.300507\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.015067\n",
+      "1  4023181e    0.932803\n",
+      "2  b20200e4    0.120261\n",
+      "3  e7f018bb    0.997612\n",
+      "4  4371c8c3    0.304211\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(5,42,True)"
+    "cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.636374\tvalid-logloss:0.63879\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[67]\ttrain-logloss:0.083386\tvalid-logloss:0.192202\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636149\tvalid-logloss:0.638037\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[94]\ttrain-logloss:0.069172\tvalid-logloss:0.1358\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637176\tvalid-logloss:0.637165\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[112]\ttrain-logloss:0.057093\tvalid-logloss:0.132826\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636049\tvalid-logloss:0.636445\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[95]\ttrain-logloss:0.069716\tvalid-logloss:0.121465\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63606\tvalid-logloss:0.6405\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[60]\ttrain-logloss:0.089799\tvalid-logloss:0.192884\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636265\tvalid-logloss:0.638264\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[119]\ttrain-logloss:0.055622\tvalid-logloss:0.126827\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636318\tvalid-logloss:0.640263\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[93]\ttrain-logloss:0.066191\tvalid-logloss:0.155524\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637516\tvalid-logloss:0.636409\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[87]\ttrain-logloss:0.079191\tvalid-logloss:0.094893\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636405\tvalid-logloss:0.6391\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[50]\ttrain-logloss:0.100278\tvalid-logloss:0.171095\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636342\tvalid-logloss:0.636694\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[77]\ttrain-logloss:0.076656\tvalid-logloss:0.15448\n",
+      "\n",
+      "local average valid loss 0.151110158532 val loss std 0.0312193652624\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.023285\n",
+      "1  4023181e    0.948394\n",
+      "2  b20200e4    0.151700\n",
+      "3  e7f018bb    0.996634\n",
+      "4  4371c8c3    0.398069\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.023462\n",
+      "1  4023181e    0.948881\n",
+      "2  b20200e4    0.157859\n",
+      "3  e7f018bb    0.996872\n",
+      "4  4371c8c3    0.406026\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(10,42,True)"
+    "cv_test(10,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
