found new way of preprocessing

--- a/notebooks/vgg_inception_resnet_data_aug_angle.ipynb
+++ b/notebooks/vgg_inception_resnet_data_aug_angle.ipynb
@@ -55,7 +55,12 @@
     "        # Formulate the bands as 75x75 arrays\n",
     "        band_1 = np.array(row['band_1']).reshape(75, 75)\n",
     "        band_2 = np.array(row['band_2']).reshape(75, 75)\n",
-    "        band_3 = (band_1 + band_2)/2\n",
+    "        band_3 = (band_1 - band_2)/2\n",
+    "        if row['inc_angle'] == 'na':\n",
+    "            ang = -1\n",
+    "        else:\n",
+    "            ang = float(row['inc_angle'])\n",
+    "        band_3 = band_3*ang\n",
     "\n",
     "        # Rescale\n",
     "        img = np.dstack([band_1,band_2,band_3])\n",
