--- a/notebooks/xception_1769_data_aug_1.ipynb
+++ b/notebooks/xception_1769_data_aug_1.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
